# netlink-rs

./: .travis.yml  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
examples/: example.rs  uevent_example.rs
src/: errors.rs  generic.rs  lib.rs  route.rs
src/core/: attribute.rs  hardware_address.rs  helpers.rs  message.rs  mod.rs  pack.rs  socket.rs  system.rs  variant.rs
