[package]
name = "netlink-rust"
version = "0.1.1"
authors = ["Erik Svensson <erik.public@gmail.com>"]
description="Netlink library in Rust"
readme = "README.md"
license="MIT"
repository="https://github.com/blueluna/netlink-rs"
keywords = ["netlink"]

[dependencies]
libc = "0.2"
byteorder = "1.2"
bitflags =  "1.0"

[dev-dependencies]
mio = "0.5"
