[package]
name = "netlink-rust"
version = "0.1.1"
authors = ["Erik Svensson <erik.public@gmail.com>"]
description="Netlink library in Rust"
readme = "README.md"
license="MIT"
repository="https://github.com/blueluna/netlink-rs"
keywords = ["netlink"]
edition = "2018"

[dependencies]
bitflags =  "1.0"
byteorder = "1.3"
libc = "0.2"

[dev-dependencies]
mio = "0.6"
